Services/proxmox/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-service
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.1.108
    ports:
      - port: 8006
